--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include HISTORY.rst
 include LICENSE
 include README.rst
 
+recursive-include drf_openapi/templates *
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
