Add Redoc screenshot

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
+    ; py.test --basetemp={envtmpdir}
 
 
 ; If you want to make tox run the tests with the same versions, create a
