--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
-envlist = py35, py36, flake8
+envlist = py27, py35, py36, flake8
 
 [travis]
 python =
     3.6: py36
     3.5: py35
+    2.7: py27
 
 [testenv:flake8]
 basepython=python
