Update bumpversion syntax

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 current_version = 0.9.7
 commit = True
 tag = True
+tag_name = {new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
